--- a/JewelryStoreWebApp/Views/Login/Login.cshtml
+++ b/JewelryStoreWebApp/Views/Login/Login.cshtml
@@ -6,23 +6,23 @@
 
 <h2>Login</h2>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
         <form method="post" asp-controller="Login" asp-action="Login"
               asp-route-returnurl="@Model.ReturnUrl">
             <div asp-validation-summary="All" class="text-danger"></div>
 
-            <div>
-                <label asp-for="Username"></label>
-                <input asp-for="Username" />
+            <div class="row">
+                <label class="col" asp-for="Username"></label>
+                <input class="col" asp-for="Username" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
 
-            <div>
-                <label asp-for="Password"></label>
-                <input asp-for="Password" />
+            <div class="row">
+                <label class="col" asp-for="Password"></label>
+                <input class="col" asp-for="Password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <input type="submit" value="Login" />
+            <div class="row"> <input type="submit" value="Login" /></div>
         </form>
     </div>
 </div>
